--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,21 +1,17 @@
 .main-header {
     width:100%;
-    background-color:#1B1919;
+    background-color:#191a1b;
     position: sticky;
     top: 0;
     z-index: 999;
 }
 
 .main-header__wrapper {
-  height: 80px;
-  line-height: 80px;
-  max-width: 1140px;
+  height: 150px;
+  line-height: 100px;
   margin: 0 auto;
 }
 
-.main-header__logo {
-    margin-left: 30px;
-}
 .main-header__link {
     text-decoration: none;
     font-size: 26px;
@@ -30,7 +26,6 @@
 }
 
 .nav__icon {
-    top: 5px;
     right: 30px;
     position: absolute;
     transition: transform 0.3s;
@@ -77,6 +72,7 @@
 }
 
 .nav__links {
+    top: 100px;
     display: block;
     width: 100%;
     height: 100%;
